@@ -11,6 +11,8 @@ Improvements:
  - Decorate replaced commits.
  - Display line numbers in main view.
  - Colorize binary diff stats. (GH #17)
+ - Custom colorization of lines matching a string prefix (GH #16).
+   Example configuration: color "Reported-by:" green default
 
 Bug fixes:
 
